@@ -3,8 +3,9 @@ Process Hacker
 2.23
  * NEW/IMPROVED:
    * Added Description column to service list
-   * Enabled multi-selection in the hidden processes window
+   * Added ability to change token integrity levels
    * Made grid color darker
+   * Enabled multi-selection in the hidden processes window
    * Added UserNotes plugin
    * Updated ExtendedNotifications plugin:
      * Added Growl support
